DuPont DevSB/src/objects/ERP_Customer_Localization__c.object
<CustomObject>
    <description>Used to manage the translations of customer master data, as stored in SAP.</description>
    <fields>
        <fullName>City__c</fullName>
        <description>The city of this customer as stored in SAP.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country of this customer as stored in SAP.</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Name of the customer.</description>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Customer__c</fullName>
        <description>Master record that this localization record is the translation of.</description>
        <label>ERP Customer</label>
        <referenceTo>ERP_Customer__c</referenceTo>
        <relationshipLabel>ERP Customer Localizations</relationshipLabel>
        <relationshipName>ERP_Customer_Localizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the Source Cluster + Customer Code + Language to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the translation</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <description>The Post Office Box of this customer as stored in SAP.</description>
        <label>PO Box</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Geographical region this customer is located as stored in SAP.</description>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>The street of this customer as stored in SAP.</description>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <description>The ZIP or postal code of this customer as stored in SAP.</description>
        <label>ZIP/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fLocal_Language__c</fullName>
        <description>Displays the Local Language description for the Nation Key value in ERP external ID</description>
        <formula>IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-1&quot;, &quot;Thai&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-8&quot; , &quot;Ukrainian_Cyril&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-A&quot; , &quot;Arabic&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-B&quot; , &quot;Hebrew&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-C&quot; , &quot;Chinese&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-G&quot; , &quot;Greek&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-H&quot;, &quot;Hangul&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-K&quot; , &quot;Kanji&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-M&quot;, &quot;Chinese trad.&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-N&quot;, &quot;Katakana&quot;, 
IF(TRIM(RIGHT(External_ERP_ID__c, 2)) = &quot;-R&quot; , &quot;Cyrillic&quot;, &quot;English&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Language</label>
        <type>Text</type>
    </fields>
    <label>ERP Customer Localization</label>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Customer Localizations</pluralLabel>
    <recordTypes>
        <fullName>ERP_Customer_Localization</fullName>
        <active>true</active>
        <description>ERP Customer Localization</description>
        <label>ERP Customer Localization</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>